exercises/counter/openshift-configuration/frontend/counter-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
      - name: counter-backend
        image: santiagotoro2023/m109-st-counter-frontend:0.1
        ports:
          - containerPort: 3000
