exercises/counter/openshift-configuration/frontend/counter-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
